Fixed layout issue. Moved style into css file. Update resume.

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,6 @@
         padding:0px;
       }
 
-
-
       a{
         color:#163459;
       }
@@ -56,19 +54,28 @@
         max-height:60px;
       }
 
-
       .section-header{
         color:#163459;
       }
+
       .title{
         margin-bottom:2%;
         padding:10px;
+      }
+
+      .blue{
+        color:#000080;
       }
 
       .day-image{
        width:99%;
        margin-bottom:10px;
        text-align: center;
+      }
+
+      #magpie-container{
+        margin-left:20%;
+        max-width:600px;
       }
 
       #clover-pic-1{
